compiler/arsenal-boot/crates/arsenal_parse/tests/snapshots/snake_eater__pass_corpus@057_array_type.gw.snap
---
source: crates/arsenal_parse/tests/snake_eater.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `t` @1:4..1:5
    ParamList @1:5..1:18
      LParen `(` @1:5..1:6
      Param @1:6..1:16
        Ident `a` @1:6..1:7
        Colon `:` @1:7..1:8
        ArrayType @1:9..1:16
          LBracket `[` @1:9..1:10
          LiteralExpr @1:10..1:12
            IntLit `10` @1:10..1:12
          RBracket `]` @1:12..1:13
          PathType @1:13..1:16
            Ident `i32` @1:13..1:16
      RParen `)` @1:16..1:17
    RetType @1:18..1:24
      Arrow `->` @1:18..1:20
      PathType @1:21..1:24
        Ident `u0` @1:21..1:23
    Block @1:24..2:1
      LBrace `{` @1:24..1:25
      RBrace `}` @1:25..1:26
